Fix too much text-shadow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,12 +99,13 @@ a:hover {
     gap: 1em;
 }
 
-.banner-content-text > h1, p {
-    text-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 1);
+.banner-content-text > h1, .banner-content-text > p {
+    text-shadow: 0.15rem 0.15rem 0.2rem rgba(0, 0, 0, 0.8);
 }
 
 .banner-content-train > img {
     max-height: 10em;
+    filter: drop-shadow(0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.5));
 }
 
 .content {
